<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="379dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:textColorHint="#304D63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:fontFamily=""
            android:hint="@string/emailr"
            android:inputType="textEmailAddress"
            android:textColor="#304D63"
            android:textSize="14sp"
            android:textStyle="italic" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="381dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:textColorHint="#304D63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#304D63"
            android:textSize="14sp"
            android:textStyle="italic" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/link_rest_password"
        android:layout_width="368dp"
        android:layout_height="18dp"
        android:gravity="right"
        android:text="@string/forogot_password"
        android:textColor="#304D63"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="351dp"
        android:layout_height="52dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/round_corner"
        android:padding="12dp"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/link_rest_password" />

    <TextView
        android:id="@+id/link_signup"
        android:layout_width="351dp"
        android:layout_height="21dp"
        android:gravity="center"
        android:text="@string/no_account_yet_create_one"
        android:textColor="#304D63"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintVertical_bias="0.111" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="411dp"
        android:layout_height="357dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/undraw_online_resume_qyys"
        android:contentDescription="TODO" />


</androidx.constraintlayout.widget.ConstraintLayout>
